feat: :sparkles: add userstamps option

--- a/src/runtime/plugins/oaSchema.ejs
+++ b/src/runtime/plugins/oaSchema.ejs
@@ -5,6 +5,7 @@ schema.type = 'object'
 delete schema.encryptedProperties
 delete schema.trackedProperties
 delete schema.timestamps
+delete schema.userstamps
 
 // remove writeOnly props
 if (schema.writeOnly) {
